// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-select-virtual-scroll Default 1`] = `
<div
  class="m-base-select m-select-virtual-scroll"
  style="width: 100%; max-width: 288px;"
  virtualscrollitemheight="52"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-select"
      style="width: 100%; max-width: regular;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Fruits
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    placeholder="Choose a fruit"
                    readonly="readonly"
                    tabindex="-1"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          >
            <!---->
             
            <div
              class="m-select__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-select__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select-virtual-scroll Virtual Scroll 1`] = `
<div
  class="m-base-select m-select-virtual-scroll"
  id="id"
  style="width: 100%; max-width: 288px;"
  virtualscrollitemheight="52"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-select"
      style="width: 100%; max-width: regular;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Longlist
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                    tabindex="-1"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          >
            <!---->
             
            <div
              class="m-select__arrow"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-select__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
